# akela

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  akela.cmake  generate_coverage.sh  gentest.bat
akela/: CMakeLists.txt  akela.c  ast.c  ast.h  code_gen.c  code_gen.h  code_gen_llvm.c  code_gen_llvm.cpp  code_gen_llvm.h  code_gen_llvm2.cpp  code_gen_llvm2.h  code_gen_tools.c  code_gen_tools.h  comp_table.c  comp_unit.c  comp_unit.h  environment.c  environment.h  input.c  lex.c  lex.h  lex_tools.c  lex_tools.h  lookahead_char.c  lookahead_char.h  lookahead_translator.c  lookahead_translator.h  os_linux.c  os_linux.h  os_win.c  parse.c  parse.h  parse_expr.c  parse_expr.h  parse_factor.c  parse_factor.h  parse_stmts.c  parse_stmts.h  parse_tools.c  parse_tools.h  (+24 more)
akela-bin/: CMakeLists.txt  akela.c
akela-llvm/: CMakeLists.txt  akela_llvm.cpp  akela_llvm.h  akela_llvm_function.cpp  akela_llvm_function.h  akela_llvm_jit.cpp  akela_llvm_jit.h  akela_llvm_literal.cpp  akela_llvm_literal.h  akela_llvm_operator.cpp  akela_llvm_operator.h  akela_llvm_stmts.cpp  akela_llvm_stmts.h  akela_llvm_struct.cpp  akela_llvm_struct.h  akela_llvm_tools.cpp  akela_llvm_tools.h  akela_llvm_variable.cpp  akela_llvm_variable.h  code_gen_llvm.cpp  code_gen_llvm.h
akela-llvm-test/: CMakeLists.txt  test.c  test_abort.c  test_akela_llvm.c  test_akela_llvm.h  test_akela_llvm_array.c  test_akela_llvm_function.c  test_akela_llvm_function.h  test_akela_llvm_literal.c  test_akela_llvm_literal.h  test_akela_llvm_operator.c  test_akela_llvm_operator.h  test_akela_llvm_stmts.c  test_akela_llvm_struct.c  test_akela_llvm_variable.c  test_code_gen.c  test_code_gen_tools.c  test_code_gen_tools.h
akela-test/: CMakeLists.txt  test.c  test_ast.c  test_comp_table.c  test_comp_unit.c  test_lex.c  test_lex_number.c  test_lex_setup.c  test_lex_tools.c  test_parse.c  test_parse.h  test_parse_expr.c  test_parse_factor.c  test_parse_function.c  test_parse_function.h  test_parse_stmts.c  test_parse_struct.c  test_parse_types.c  test_parse_types.h  test_symbol_table.c  test_token.c  test_type.c
alba/: CMakeLists.txt  akela_api.h  alba.c  alba_api.h  allocator.c  allocator.h  ast.c  ast.h  buffer.c  buffer.h  comp_table.c  comp_table.h  comp_unit.c  comp_unit.h  dag.c  dag.h  expr.c  expr.h  hash.c  hash.h  input.c  input.h  io.c  io.h  lookahead_char.c  lookahead_char.h  lookahead_translator.c  lookahead_translator.h  old_parse.c  os_linux.c  os_linux.h  os_win.c  os_win.h  parse.c  parse.h  parse_al.c  parse_defer.c  parse_expr.c  parse_expr.h  parse_factor.c  (+42 more)
centipede/: CMakeLists.txt  ast.c  ast.h  base.c  build.c  build.h  check_types.c  comp_unit.c  comp_unit.h  element.c  element.h  enumerate.c  enumerate.h  environment.c  environment.h  lex.c  lex.h  lex_data.c  lex_data.h  lex_tools.c  lex_tools.h  parse.c  parse.h  parse_data.c  parse_data.h  parse_expr.c  parse_object_stmts.c  parse_object_stmts.h  parse_stmts.c  parse_tools.c  parse_tools.h  semantic.c  semantic.h  symbol.c  symbol.h  token.c  token.h  update_types.c  update_types.h  update_values.c  (+3 more)
cobble/: Ast_node.c  Ast_node.h  CMakeLists.txt  README.md  String_slice.h  compile.c  compile.h  compile_data.c  compile_data.h  compile_tools.c  compile_tools.h  match.c  match.h  match_tools.c  match_tools.h  token.c  token.h  unit_test_string_slice.c  unit_test_string_slice.h
cobble/doc/: lint.md  regex.md  todo.md
coverage-test/: CMakeLists.txt  test.c  test_data.c  test_parse.c
dataframe-test/: CMakeLists.txt  test.c  test_csv_lex.c  test_csv_parse_tools.h  test_csv_write.c  test_field_lex.c
src/akela-llvm/: CMakeLists.txt  akela_llvm.cpp  akela_llvm.h  akela_llvm_function.cpp  akela_llvm_jit.cpp  akela_llvm_jit.h  cg.cpp  (+25 more)
src/akela-llvm-unit/: CMakeLists.txt  function_pointer.cpp  test_cg_tools.c  test_function.c  test_literal.c  test_operator.c  test_stmts.c  test_struct.c  test_struct.h  test_variable.c  unit.c  unit.h  unit_array.c  unit_array.h  unit_cg_tools.c  unit_cg_tools.h  unit_function.c  unit_function.h  unit_literal.c  unit_literal.h  unit_operator.c  unit_operator.h  unit_stmts.c  unit_stmts.h  unit_struct.c  unit_struct.h  unit_variable.c  unit_variable.h
test/: CMakeLists.txt  assert.c  assert.h  assert_compiler.c  assert_compiler.h  event_loop.c  function_pointer.cpp  main.c  setup.c  setup.h  test.c  test_allocator.c  test_allocator.h  test_ast.c  test_buffer.c  test_buffer.h  test_code_gen.c  test_code_gen_tools.c  test_code_gen_tools.h  test_comp_table.c  test_comp_unit.c  test_comp_unit.h  test_dag.c  test_dag.h  test_hash.c  test_hash.h  test_input.c  test_input.h  test_io.h  test_lex.c  test_lex_number.c  test_lex_number.h  test_lex_setup.c  test_lex_setup.h  test_lex_tools.c  test_lex_tools.h  test_lookahead_char.c  test_lookahead_char.h  test_lookahead_translator.c  test_lookahead_translator.h  (+26 more)
zinc/: CMakeLists.txt  README.md  api.h  buffer.c  buffer.h  buffer_list.c  buffer_list.h  csv_lex.c  csv_lex.h  csv_parse.c  csv_parse.h  csv_write.h  data_frame.c  data_frame.h  datetime.h  error.c  error.h  error_unit_test.c  error_unit_test.h  field.c  field.h  field_lex.c  field_lex.h  hash.c  hash.h  hash_map_size_t.c  hash_map_size_t.h  input_char.h  input_char_file.c  input_char_string.c  input_char_string.h  input_unicode.c  input_unicode_file.c  input_unicode_file.h  input_unicode_string.c  input_unicode_string.h  list.c  list.h  os_win.c  result.c  (+9 more)
zinc-test/: CMakeLists.txt  test.c  test_buffer.c  test_buffer.h  test_buffer_list.c  test_buffer_list.h  test_csv_lex.c  test_csv_lex.h  test_csv_parse.c  test_csv_parse.h  test_csv_parse_tools.c  test_csv_parse_tools.h  test_csv_write.c  test_csv_write.h  test_data_frame.c  test_data_frame.h  test_datetime.h  test_error.h  test_field_lex.c  test_field_lex.h  test_hash.c  test_input_char_file.c  test_input_char_file.h  test_input_char_string.c  test_input_unicode_file.c  test_input_unicode_file.h  test_input_unicode_string.c  test_list.h  test_os_unix.c  test_result.c  test_result.h  test_unit_test.h  test_utf8.c  test_vector.c  test_vector.h
(+930 files in other folders)
